--- a/about/index.html
+++ b/about/index.html
@@ -110,7 +110,7 @@ https://github.com/mossberg"/>
             
                 <div id="disqus_thread"></div>
 <script type="text/javascript">
-    var disqus_shortname = 'your_disqus_short_name'; 
+    var disqus_shortname = 'markmossberg'; 
 
      
     (function() {
