--- a/about/index.html
+++ b/about/index.html
@@ -132,7 +132,7 @@ https://github.com/mossberg"/>
 
 	
 	
-    <a class="symbol" href="https://www.github.com/mossberg">
+    <a class="symbol" href="https://www.github.com/offlinevx">
         <i class="fa fa-github-square"></i>
     </a>
     
