--- a/about/index.html
+++ b/about/index.html
@@ -17,7 +17,7 @@
   <meta name="twitter:description" content="I&rsquo;m a music producer and computer programmer :)
 https://soundcloud.com/sendcomfort
 https://twitter.com/offlinemark
-https://github.com/mossberg"/>
+https://github.com/offline4k"/>
   
     <meta name="twitter:site" content="@offlinemark"/>
   
@@ -89,7 +89,7 @@ https://github.com/mossberg"/>
 
 <p><a href="https://soundcloud.com/sendcomfort">https://soundcloud.com/sendcomfort</a><br />
 <a href="https://twitter.com/offlinemark">https://twitter.com/offlinemark</a><br />
-<a href="https://github.com/mossberg">https://github.com/mossberg</a></p>
+<a href="https://github.com/offline4k">https://github.com/offline4k</a></p>
 
                 </section>
             </article>
@@ -132,7 +132,7 @@ https://github.com/mossberg"/>
 
 	
 	
-    <a class="symbol" href="https://www.github.com/offlinevx">
+    <a class="symbol" href="https://www.github.com/offline4k">
         <i class="fa fa-github-square"></i>
     </a>
     
