--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
         
             <li>
                 <aside class="dates">2019-11-28</aside>
-                <a href='https://vmresu.me/posts/2019-11-28-cmake-libxml&#43;&#43;/'>
-                    Notes on pedantic C&#43;&#43; compilation
+                <a href='https://vmresu.me/posts/2019-11-28-pedantic-c&#43;&#43;-compilation/'>
+                    Being pedantic about C&#43;&#43; compilation
                     
                 </a>
             </li>
